# tools

./: LICENSE  README.md
apriltag_detector/: CMakeLists.txt  Readme.md  package.xml
apriltag_detector/config/: explorer_camera_calib.yaml  tags_params.yaml
apriltag_detector/include/apriltag_detector/: bridge.hpp  detector.hpp
apriltag_detector/launch/: explorer_camera_detection.launch.py
apriltag_detector/src/: bridge.cpp  detector.cpp
dynamic_parameters_identification/: README.md  package.xml  setup.cfg  setup.py
dynamic_parameters_identification/bringup/config/: joint_sine_trajectory_params.yaml  parameters_identification_params.yaml
dynamic_parameters_identification/bringup/launch/: joint_sine_trajectory.launch.py  parameters_identification.launch.py
dynamic_parameters_identification/dynamic_parameters_identification/: joints_sinusoids.py  parameters_identification.py
extender_msgs/: CMakeLists.txt  Readme.md  package.xml
extender_msgs/msg/: AprilTagPose.msg  AprilTagPoseArray.msg  JointPositionCommand.msg  SharedControlGoal.msg  SharedControlGoalArray.msg  TeleopCommand.msg
mediapipe_mocap/: README.md  package.xml  setup.cfg  setup.py
mediapipe_mocap/config/: 3d_hand_landmarks_oak_node.yaml  hand_landmarks_node.yaml  webcam_publisher.yaml
mediapipe_mocap/launch/: hand_landmarks_launch.py  oak_hand_landmarks_launch.py  test_offline_video_hand_landmarks_launch.py  viewer_launch.py  webcam_hand_landmarks_launch.py
mediapipe_mocap/mediapipe_mocap/: 3d_hand_landmarks_oak_node.py  hand_landmarks_common.py  hand_landmarks_node.py  viewer_node.py  webcam_publisher_node.py
mediapipe_mocap/test/: test_copyright.py  test_flake8.py  test_hand_landmarks_common.py  test_pep257.py
offline_media_publisher/: README.md  package.xml  setup.cfg  setup.py
offline_media_publisher/config/: image_publisher.yaml  video_publisher.yaml
offline_media_publisher/launch/: image_publisher_launch.py  video_publisher_launch.py
offline_media_publisher/offline_media_publisher/: image_publisher_node.py  video_publisher_node.py
replay_joint_positions/: Readme.md  package.xml  setup.cfg  setup.py
replay_joint_positions/config/: replay_config.yaml  save_config.yaml
replay_joint_positions/replay_joint_positions/: manual_save_joint_positions.py  replay_joint_positions.py
signal_processing/: .gitignore  CMakeLists.txt  README.md  package.xml
signal_processing/include/signal_processing/: dead_zone.hpp  low_pass_filter.hpp  one_euro_filter.hpp  saturation.hpp  signal_processing.hpp
signal_processing/signal_processing/: __init__.py  dead_zone.py  low_pass_filter.py  one_euro_filter.py  saturation.py  signal_processing_tester.py  tester_model.py
signal_processing/src/: dead_zone.cpp  low_pass_filter.cpp  one_euro_filter.cpp  saturation.cpp  signal_processing.cpp  signal_processing_tester_launcher.c
signal_processing/test/: test_signal_processing.cpp  test_signal_processing.py  test_signal_processing_tester_model.py
