<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mediapipe_mocap</name>
  <version>0.0.0</version>
  <description>ROS2 node extracting hand landmarks from RGB images with MediaPipe.</description>
  <maintainer email="etienne.moullet@gmail.com">emoullet</maintainer>
  <license>BSD-3-Clause</license>

  
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>signal_processing</exec_depend>

  <!-- MediaPipe and DepthAI are pip-installed for this package. -->
  <exec_depend>mediapipe</exec_depend>
  <exec_depend>depthai</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
